style.css
/* ... */
@media (max-width: 767px) {
    .page-container {
        overflow-x: hidden;
        position: relative;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p,
    #disqus_thread {
        padding-left: 10px !important;
        padding-right: 10px !important;
    }

    .b-parallax {
        background-attachment: scroll;
    }

    .navbar .nav {
        padding-top: 0;
        border-top: 1px solid rgba(0, 0, 0, .2);
        float: none !important;
    }

    .navbar.row {
        margin-left: 0;
        margin-right: 0;
    }

    .site-navigation {
        position: inherit;
        transform: none;
        -webkit-transform: none;
        -ms-transform: none;
    }

    .nav>li {
        margin-top: 0;
        border-bottom: 1px solid rgba(0, 0, 0, .1);
        background: rgba(0, 0, 0, .05);
        text-align: left;
        padding-left: 15px;
        width: 100%;
    }

    .nav>li:hover {
        background: rgba(0, 0, 0, .08);
    }

    .dropdown .dropdown a .caret {
        float: none;
        margin: 5px 0 0 10px !important;
        border: 4px solid black;
        border-bottom-color: transparent;
        border-right-color: transparent;
        border-left-color: transparent;
    }

    #hero-bloc .navbar .nav {
        background: rgba(0, 0, 0, .8);
    }

    #hero-bloc .navbar .nav a {
        color: rgba(255, 255, 255, .6);
    }

    .hero {
        padding: 50px 0;
    }

    .hero-nav {
        left: -1px;
        right: -1px;
    }

    .navbar-collapse {
        padding: 0;
        overflow-x: hidden;
        -webkit-box-shadow: none;
        box-shadow: none;
    }

    .navbar-brand img {
        max-height: 40px;
        width: auto;
    }

    .nav-invert .navbar-header {
        float: none;
        width: 100%;
    }

    .nav-invert .navbar-toggle {
        float: left;
        margin-left: 10px;
    }

    .bloc {
        padding-left: 0;
        padding-right: 0;
    }

    .bloc-xxl,
    .bloc-xl,
    .bloc-lg {
        padding: 40px 0;
    }

    .bloc-sm,
    .bloc-md {
        padding-left: 0;
        padding-right: 0;
    }

    .bloc-tile-2 .container,
    .bloc-tile-3 .container,
    .bloc-tile-4 .container,
    .bloc-fill-screen .fill-bloc-top-edge,
    .bloc-fill-screen .fill-bloc-bottom-edge {
        padding-left: 0;
        padding-right: 0;
    }

    .a-block {
        padding: 0 10px;
    }

    .btn-dwn {
        display: none;
    }

    .voffset {
        margin-top: 5px;
    }

    .voffset-md {
        margin-top: 20px;
    }

    .voffset-lg {
        margin-top: 30px;
    }

    form {
        padding: 5px;
    }

    .close-lightbox {
        display: inline-block;
    }

    .blocsapp-device-iphone5 {
        background-size: 216px 425px;
        padding-top: 60px;
        width: 216px;
        height: 425px;
    }

    .blocsapp-device-iphone5 img {
        width: 180px;
        height: 320px;
    }
}

@media (max-width: 400px) {
    .bloc {
        padding-left: 0;
        padding-right: 0;
    }
}

@media (max-width: 767px) {
    .bloc-mob-center-text {
        text-align: center;
    }
}

.text-center,
.hero-bloc-text,
.tc-white,
.titre {
    display: flex;
    justify-content: center;
    align-items: center;
}

.col-sm-12.text-center {
    flex-direction: column;
}

.col-sm-12.text-center>p {
    font-size: 2rem;
}

.text-center {
    font-size: 1.5rem;
    font-weight: 600;
}

.col-xs-12.col-md-8.col-md-offset-2.text-center {
    flex-direction: column;
    color: #000000;
}

p.mg-md {
    color: #fffaf8;
    font-size: 2.5rem;
    text-shadow: #333333 1px 1px;
}

.text-center.white {
    font-size: 2rem;
    text-shadow: 1px 1px black;
}

.contactezNotreEquipe {
    display: flex;
    justify-content: center;
    font-size: 1.8rem;
}

.contactezNotreEquipe:hover {
    color: #F3976C;
}

.contactezNotreEquipe:focus {
    border: black solid 3px;
}

.col-sm-14:focus {
    border: 3px solid black;
}

h3:nth-child(2) {
    font-size: 1.8rem;
}

h3:nth-child(2)+p {
    font-size: 1.7rem;
}

h2.mg-md {
    color: #FFFFFF;
    font-size: xx-large;
    font-weight: 900;
    text-shadow: #000000 1px 2px;
}

#contact {
    font-size: 2.2rem;
    color: #FFFFFF;
    display: flex;
    justify-content: center;
    text-shadow: 1px 1px black;
}

